--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Sep 12 18:55:00 1997  Jeff Bailey  (jbailey@nisa.net)
+
+	* *.c, *.h, *.y: move to src/
+	* get rid of irs-1992.oleo for good this time
+
 Mon Sep  1 23:12:00 1997  Jeff Bailey  (jbailey@nisa.net)
 
         * INSTALL.OLEO: remove
