--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Sep 13 17:02:00 1997  Jeff Bailey  (jbailey@nisa.net)
+
+	* Update obstack.[ch] from Glibc.
+	* Fix documentation so that no errors are produced from makeinfo.
+
 Fri Sep 12 18:55:00 1997  Jeff Bailey  (jbailey@nisa.net)
 
 	* *.c, *.h, *.y, ylwrap: move to src/
