--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Thu Sep 25 22:05:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* Update to Automake-1.2b to try and fix library problem.
+	* ylwrap: update
+	* missing: update
+
+Sun Sep 21 17:11:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* io-x11.c: include config.h before ifdef'ing.
+	* xrdb.c: ditto
+	* src/Makefile.am: Don't include -lX11 if no X is compiled.
+
 Fri Sep 19 23:21:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* io-x11.c: Roll back some patches now that I grok the file.
