--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Thu Oct 2  22:27:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* ansi2knr.[c1] added to lib/ directory.
+
+Wed Oct 1  19:12:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* regenerate with Automake-1.2c to fix build time test problem
+	* ir.c: ANSIfy
+	* basic.c: More of same
+	* window.c: More of same
+	* args.c: More of same
+
+	* cmd.c: Mostly ANSIfy.  Where couldn't for now, search FIXME in
+	sources.
+
 Fri Sep 26 22:44:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* getdate.y: Fix declarations, remove RCS references
