--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 4  18:42:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* Fix stub #defines in stub.c
+
 Sat Oct 4  17:12:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* io-x11.c: ANSIfy
