--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct 10 00:28:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* KEYS: move to doc/
+
 Tue Oct 7  20:39:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* utils.c, panic.c: Remove hard coded "Oleo" words.
