--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Oct 22 22:35:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
+
+	* io-term.c: Add File, Edit menus to window.
+
 Sat Oct 18 19:47:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* Modify src/Makefile.am to not include the X Include path twice.
