--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ Sun Oct 26 14:38:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 	* src/io-gtk.c: Rename functions to match rest of Oleo.
 	Add stub functions for places where code hasn't been flushed
 	out yet.  Begin to add code to place characters in drawing_area.
+	* src/Makefile.am: modify to include io-gtk.h. 
  
 Fri Oct 24 22:17:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
