--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov 15 17:03:00 1997  Jeff Bailey  (jbailey@gnu.org)
+
+	* THANKS: File added
+	* Makefile.am: Updated to gnits.
+
 Wed Nov 5 21:05:00 1997  Jeff Bailey  (jbailey@gnu.ai.mit.edu)
 
 	* src/io-gtk.c: Abstract Oleo close routine.
