--- a/THANKS
+++ b/THANKS
@@ -4,7 +4,8 @@ bribed me to put their names in here):
 (If I missed you, email me)
 
 Jeff Bailey, Tom Lord, A whole pile of people from the ChangeLog,
-Joel N. Webber II, Richard Stallman, Mark E. Davidson, Ted Arm.
+Joel N. Webber II, Richard Stallman, Mark E. Davidson, Ted Arm
+Steve Fisk, Kai Getrost.
 
 Other people deserve a word of thanks:
 Tom Tromey & Friends: For making AutoMake
