--- a/TODO
+++ b/TODO
@@ -2,18 +2,29 @@ Short-term TODO's:
 
 * Update AUTHORS list to show everyone in ChangeLog. (June 1/97 - JB)
 
+* Ditto THANKS file. (15 Nov - JB)
+
 * Increase "X" friendliness. (June 1/97 - JB)
 
 * Add Mouse support. (June 1/97 - JB)
 
-* Write Documentation.  (June 1/97 - JB)
-
 * Create proper bug tracking facilities.  GNATS?  (June 1/97 - JB)
-
-Longer-term TODO's:
 
 * Import/Export Filters. (June 1/97 - JB)
 
-* Tighter link with GNU Plot. (June 1/97 - JB)
+* Tighter link with GNU Plotutils. (Nov 15/97 - JB)
 
-* Scripting Language.  GUILE? (June 1/97 - JB)
+* Scripting Language.  GUILE? (June 1/97 - RMS)
+
+* Gtk+ Toolkit Implementation (Nov 15/97 - JB)
+
+* GNU GetText (Nov 15/97 - Joel N. Webber II)
+
+* Cleanup source directory (Nov 15/97 - JB)
+
+* Setup Oleo Lists (Nov 15/97 - JB)
+
+* Merge newer documention (Nov 15/97 - Paul Wendt)
+
+* Fix sort routines (Nov 15/97 - Steve Fisk)
+
